# qa-snapshot-inspector-poc

./: .gitignore  .mailmap  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  LICENSE  QuantumInspector.spec  README.de.md  README.es.md  README.md  ROADMAP.md  SECURITY.md  launcher.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release-build.yml
docs/: ARCHITECTURE.md  IMPLEMENTATION_LOG.md  PERFORMANCE_ACCEPTANCE.md  POC_VALIDATION.md  RELEASE_CHECKLIST_2_0.md  SCRCPY_INTEGRATION.md  SIGNOFF_RUNBOOK_2_0.md  TROUBLESHOOTING.md  USAGE_GUIDE.md
docs/evidence/emulator/: emulator_smoke_2026-03-02.md
docs/evidence/maestro/: maestro_signoff_2026-03-02.md
docs/evidence/perf/: perf_signoff_2026-03-02.md
scripts/: emulator_smoke.ps1  maestro_signoff_check.py  perf_ab_capture.ps1  perf_ab_capture.py  profile_hotspots.py  rack_multidevice_signoff.ps1  release_gate.ps1  safe_playbook.cmd  safe_playbook.ps1  verify_forced_crash_signoff.py
src/: README.md
src/qa_snapshot_native/: __init__.py
src/qa_snapshot_tool/: adb_capture.py  adb_manager.py  device_profiles.py  gui.py  live_mirror.py  locator_suggester.py  maestro_handoff.py  main.py  oldlive_inspector.py  perf_metrics.py  session_recorder.py  settings.py  theme.py  uix_parser.py  utils.py
test_snapshot/: dump.uix
tests/: test_device_profiles.py  test_gui_deep_links.py  test_gui_runtime_policies.py  test_live_scheduler.py  test_maestro_handoff.py  test_native_hotspots.py  test_parser.py  test_session_recorder.py  test_workspace_isolation.py
(+2 files in other folders)
